fix: 兼容java 17